spacing problem fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 * {
   box-sizing: border-box;
   background-color: whitesmoke;
-  font-family: "Montserrat", sans-serif;
 }
