--- a/src/Contacto/Contacto.css
+++ b/src/Contacto/Contacto.css
@@ -1,3 +1,17 @@
 .contacto {
+  width: 70%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.contact p {
   text-align: center;
+}
+
+.contactUs {
+  float: right;
+
+  width: 280px;
+  height: auto;
+  border-radius: 15px;
 }
