--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   font-family: "Actor", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
 }
 
 code {
